[gd_scene load_steps=2 format=2]

[ext_resource path="res://nodes/player/controllable camera.gd" type="Script" id=1]

[node name="control_camera" type="Spatial"]
script = ExtResource( 1 )

[node name="GimbaH" type="Spatial" parent="."]

[node name="GimbaV" type="Spatial" parent="GimbaH"]

[node name="ClippedCamera" type="ClippedCamera" parent="GimbaH/GimbaV"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 6 )
current = true
